--- a/vir_theme.scss
+++ b/vir_theme.scss
@@ -339,9 +339,9 @@ footer {
 @media (min-width: 900px) {
   .grid-vir {
     //grid-auto-columns: 1fr;
-    grid-auto-rows: 1fr;
-    //grid-template-rows: 4fr 3fr;
-    grid-template-columns: 5fr 3fr 3fr;
+    //grid-auto-rows: 1fr;
+    grid-template-rows: 4fr 3fr;
+    grid-template-columns: 1.5fr 1fr 1fr;
     grid-template-areas: 
     'Item1 Item2 Item2'
     'Item1 Item3 Item4';
